[gd_scene load_steps=11 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://tileset.png" type="Texture" id=2]
[ext_resource path="res://Poco.ttf" type="DynamicFontData" id=3]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 167, 167 )
modulate_color = Color( 1, 0.572549, 0.137255, 1 )

[sub_resource type="DynamicFont" id=5]
size = 20
outline_size = 1
outline_color = Color( 0.396078, 0.937255, 0.282353, 1 )
use_filter = true
extra_spacing_top = -9
extra_spacing_bottom = 3
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.32549, 0.745098, 0.235294, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_size = 5

[sub_resource type="DynamicFont" id=6]
size = 20
outline_size = 1
outline_color = Color( 0.960784, 0.780392, 0.317647, 1 )
use_filter = true
extra_spacing_top = -9
extra_spacing_bottom = 2
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.886275, 0.517647, 0, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_size = 5

[sub_resource type="DynamicFont" id=7]
size = 20
outline_size = 1
outline_color = Color( 1, 0.34902, 0.34902, 1 )
use_filter = true
extra_spacing_top = -9
extra_spacing_bottom = 2
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 0, 0, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_size = 5

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
modulate = Color( 0.686275, 0.686275, 0.686275, 1 )
light_mask = 1048575
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -42.0
margin_top = -37.0
margin_right = 42.0
margin_bottom = 34.0
custom_constants/separation = 8

[node name="Easy" type="Button" parent="VBoxContainer"]
margin_right = 84.0
margin_bottom = 18.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
text = "Easy"

[node name="Medium" type="Button" parent="VBoxContainer"]
margin_top = 26.0
margin_right = 84.0
margin_bottom = 43.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
text = "Medium"

[node name="Hard" type="Button" parent="VBoxContainer"]
margin_top = 51.0
margin_right = 84.0
margin_bottom = 68.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
text = "Hard"

[connection signal="pressed" from="VBoxContainer/Easy" to="." method="_on_Easy_pressed"]
[connection signal="pressed" from="VBoxContainer/Medium" to="." method="_on_Medium_pressed"]
[connection signal="pressed" from="VBoxContainer/Hard" to="." method="_on_Hard_pressed"]
